[gd_scene load_steps=12 format=3 uid="uid://dpphylf7cbyvq"]

[ext_resource type="Script" path="res://scenes/terrain/dispenser.gd" id="1_78p3l"]
[ext_resource type="Texture2D" uid="uid://dw3v4woylijag" path="res://art/sprites/softblock.png" id="2_di7d8"]
[ext_resource type="Texture2D" uid="uid://c7g86rt0vhwwf" path="res://art/sprites/dispenser_star.png" id="3_8gy0k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gp1hp"]
size = Vector2(24, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_esxae"]
size = Vector2(18, 3)

[sub_resource type="Animation" id="Animation_8vsm5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_o8sv4"]
resource_name = "active"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_vpgnl"]
resource_name = "knock_down"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bt4co"]
resource_name = "knock_up"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_usdv8"]
_data = {
"RESET": SubResource("Animation_8vsm5"),
"active": SubResource("Animation_o8sv4"),
"knock_down": SubResource("Animation_vpgnl"),
"knock_up": SubResource("Animation_bt4co")
}

[sub_resource type="Gradient" id="Gradient_k01i6"]
offsets = PackedFloat32Array(0, 0.896679)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Dispenser" type="StaticBody2D"]
collision_mask = 12
script = ExtResource("1_78p3l")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_di7d8")
hframes = 4
vframes = 2
frame = 4

[node name="WorldCol" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_gp1hp")

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="Col" type="CollisionShape2D" parent="HitArea"]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_esxae")
debug_color = Color(0.596143, 0, 0.7, 0.42)

[node name="AboveHitArea" type="Area2D" parent="."]
position = Vector2(0, -24)
collision_layer = 0
collision_mask = 8

[node name="Col" type="CollisionShape2D" parent="AboveHitArea"]
position = Vector2(0, 12.5)
shape = SubResource("RectangleShape2D_esxae")
debug_color = Color(0.596143, 0, 0.7, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_usdv8")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, -11)
emitting = false
amount = 32
lifetime = 2.0
one_shot = true
texture = ExtResource("3_8gy0k")
direction = Vector2(0, -1)
gravity = Vector2(0, 80)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angular_velocity_min = 50.0
angular_velocity_max = 100.0
scale_amount_min = 0.25
color_ramp = SubResource("Gradient_k01i6")

[node name="SFX" type="AudioStreamPlayer2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SpawnPos" type="Marker2D" parent="."]
position = Vector2(0, -24)
